--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,125 @@
     transform: rotate(360deg);
   }
 }
+
+
+.grid_box {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 60px 8%;
+
+  height: calc(100vh - 120px);
+}
+
+.img_box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dice_image {
+  width: 80%;
+  object-fit: contain;
+}
+
+.content_box {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.heading {
+  font-size: 96px;
+  font-weight: 700;
+}
+
+
+.btn_box {
+  display: flex;
+  gap: 20px;
+}
+
+.container {
+  padding: 60px 8%;
+
+  height: calc(100vh - 120px);
+}
+
+.score_btn_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.game_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+
+.rules_div {
+  background-color: #f4f4f4;
+  padding: 30px 50px;
+  margin-top: 30px;
+  text-align: left;
+}
+
+.rules_para {
+  font-size: 14px;
+}
+
+* {
+  box-sizing: border-box;
+}
+.App {
+  font-family: sans-serif;
+}
+
+button {
+  background-color: black;
+  color: white;
+  min-width: 220px;
+  height: 44px;
+  padding: 10px 18px;
+
+  border-radius: 5px;
+  border: 0;
+}
+
+.select_button {
+  min-width: 0px;
+  width: 60px;
+  height: 60px;
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+  border-radius: 5px;
+}
+
+.btn_selected{
+
+  min-width: 0px;
+  width: 60px;
+  height: 60px;
+  background-color: black;
+  color: white;
+  border: 2px solid black;
+  border-radius: 5px;
+
+}
+.select_button:hover {
+  background-color: black;
+  color: white;
+}
+
+.select_button .selected {
+  background-color: black;
+  color: white;
+}
+
+.error{
+  color: red;
+}
